# internal/gallery/delivery/http/filter.go
@@ -2,25 +2,24 @@ package v1
 
 import (
 	"net/http"
-	"strconv"
 
 	"github.com/devstackq/bazar/internal/models"
 	"github.com/gin-gonic/gin"
 )
 
 // Filter  godoc
-// @Description  Get Filtered Cars, recieve by query-params ["category", "state", "brand", "model"] and/or [priceTo/proceFrom] and/or 1 param - sort:  [sort_created_at/sort_price/sort_year/sort_odometer - asc/desc]  and  page_num=1
+// @Description  Get Filtered Cars, recieve by query-params ["category", "state", "brand", "model"] and/or [priceTo/proceFrom] or [yearFrom&yearTo] and/or 1 param - sort:  [sort_created_at/sort_price/sort_year/sort_odometer - asc/desc] default return all cars; if not found return message
 // @Tags         Machine
 // @Produce      json
-// @Param        input  query   string  true "?category=1&state=1&brand=1&model=1&priceFrom=1000&priceTo=20000&sort_price=asc&page_num=1"
+// @Param        input  query   string  true "?category=1&state=1&brand=1&model=1&priceFrom=1000&priceTo=20000&yearFrom=1990&yearTo=2030&sort_price=asc&page_num=1"
 // @Failure      400,500  {object}  models.Response
 // @Success      200      {object}  []models.Machine
-// @Router       /v1/machine/filter [get]
+// @Router       /v1/machine/filter [post]
 func (h *Handler) GetFilteredMachine(c *gin.Context) {
 	var (
-		result  []*models.Machine
-		err     error
-		value   string
+		result []*models.Machine
+		err    error
+		// value  string
 		pageNum int
 	)
 
@@ -33,15 +32,7 @@ func (h *Handler) GetFilteredMachine(c *gin.Context) {
 		return
 	}
 
-	if value = c.Query("page_num"); value == "" {
-		value = "1"
-	}
-	pageNum, err = strconv.Atoi(value)
-	if err != nil || pageNum < 0 {
-		h.logger.Error(err)
-		responseWithStatus(c, http.StatusBadRequest, err.Error(), "input error", nil)
-		return
-	}
+	// err = c.ShouldBindJSON(&f) //map[key]value
 
 	result, err = h.useCases.FilterUseCaseInterface.GetListMachineByFilter(keys, pageNum)
 	if err != nil {
